--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate-card",
-  "version": "1.5.0",
+  "version": "1.0.10",
   "description": "Lovelace boilerplate-card",
   "keywords": [
     "home-assistant",
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "start": "rollup -c rollup.config.dev.js --watch",
-    "build": "npm run lint && npm run rollup",
+    "build": "node ./scripts/bump-version.js && npm run lint && npm run rollup",
     "lint": "eslint src/*.ts",
     "rollup": "rollup -c"
   },
