--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-card",
-  "version": "1.0.22",
-  "description": "Lovelace boilerplate-card",
+  "name": "space-hub-card",
+  "version": "1.0.3",
+  "description": "Lovelace space-hub-card",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,8 +10,8 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "room-card.js",
-  "repository": "git@github.com:custom_cards/boilerplate-card.git",
+  "module": "space-hub-card.js",
+  "repository": "git@github.com:bitosome/space-hub-card.git",
   "author": "Ian Richardson <iantrich@gmail.com>",
   "license": "MIT",
   "dependencies": {
